# local_airflow

./: .gitignore  README.md  comandos.txt  docker-compose.yaml  extracao_api_twitter.py  extracao_api_visualcrossing.py  extrai_api.py  info_airflow.txt  info_docker.txt  info_poetry.txt  pyproject.toml
dags/: api_labdados.py  api_visualcrossing.py  first_dag.py  first_python_operator.py  hello_world.py
datalake/twitter_datascience/extract_date=2024-11-01/: datascience_20241101.json
datalake/twitter_datascience/extract_date=2024-11-02/: datascience_20241102.json
datalake/twitter_datascience/extract_date=2024-11-03/: datascience_20241103.json
datalake/twitter_datascience/extract_date=2024-11-04/: datascience_20241104.json
datalake/twitter_datascience/extract_date=2024-11-05/: datascience_20241105.json
datalake/twitter_datascience/extract_date=2024-11-06/: datascience_20241106.json
datalake/twitter_datascience/extract_date=2024-11-07/: datascience_20241107.json
datalake/twitter_datascience/extract_date=2024-11-08/: datascience_20241108.json
hook/: twitter_hook.py
operators/: twitter_operator.py
operators/datalake/twitter_datascience/extract_date=2024-11-03/: datascience_2024-11-03.json
semana=2024-11-01/: condicoes.csv  dados_brutos.csv  temperaturas.csv
src/notebooks/: exploracao_spark.ipynb
src/notebooks/output/tweet/: part-00000-a0795a8e-ddbb-4efa-a64f-a12b0ac7f2c2-c000.json  (+1 more)
src/scripts/: transformation.py
week=2024-10-28/: condicoes.csv  dados_brutos.csv  temperaturas.csv
week=2024-11-04/: condicoes.csv  dados_brutos.csv  temperaturas.csv
(+2 files in other folders)
