[tool.poetry]
name = "local-airflow"
version = "0.1.0"
description = "Testes com Airflow"
authors = ["Felipe Alves <felipealvss.95@gmail.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
pyspark = "^3.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
